[package]
name = "ec-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
structopt = "0.3.26"
tokio = "1.25.0"
